--- a/database.conf
+++ b/database.conf
@@ -1,5 +1,5 @@
-POSTGRES_USER=docker_user
-POSTGRES_PASSWORD=password
-POSTGRES_HOST=database
+POSTGRES_USER=dev_user
+POSTGRES_PASSWORD=dev1234
+POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
-POSTGRES_DB=docker_db
+POSTGRES_DB=dev_db
