--- a/Pipfile
+++ b/Pipfile
@@ -45,6 +45,7 @@ SQLAlchemy = "==1.3.7"
 SQLAlchemy-Utils = "==0.34.2"
 Werkzeug = "==0.15.5"
 WTForms = "==2.2.1"
+pipenv = "==2018.11.26"
 
 [requires]
 python_version = "3.7"
