--- a/Project/jenkins/Jenkinsfile
+++ b/Project/jenkins/Jenkinsfile
@@ -8,6 +8,7 @@ pipeline {
           agent { docker { image 'python:3.6.9' } }
             steps {
               sh 'python --version'
+              sh 'pip install boto3==1.9.209'
               sh 'python gen_creds_for_db.py'
             }
         }
