--- a/Project/jenkins/Jenkinsfile
+++ b/Project/jenkins/Jenkinsfile
@@ -5,11 +5,9 @@ pipeline {
     }
     stages {
         stage('Gen creds') {
-          agent { docker { image 'python:3.7.2' } }
+          agent { docker { image 'python:3.7.4' } }
             steps {
-              sh ''
-              sh 'python --version'
-              sh 'pip install -r requirements.txt'
+              sh 'pip install --user boto3==1.9.209'
               sh 'python gen_creds_for_db.py'
             }
         }
