--- a/Project/jenkins/Jenkinsfile
+++ b/Project/jenkins/Jenkinsfile
@@ -5,7 +5,7 @@ pipeline {
     }
     stages {
         stage('Gen creds') {
-          agent { docker { image 'python:3.7.4' } }
+          agent { docker { image 'python:3.7.4' args '-u root:root' } }
             steps {
               sh 'pip install --user boto3==1.9.209'
               sh 'python gen_creds_for_db.py'
