--- a/Project/jenkins/Jenkinsfile
+++ b/Project/jenkins/Jenkinsfile
@@ -5,10 +5,15 @@ pipeline {
     }
     stages {
         stage('Gen creds') {
-            docker.image("python:3.7").inside("--user root"){
-            sh "pip install boto3==1.9.209"
+                agent {
+                docker {
+                    image 'python:3-alpine'
+                }
+            }
+               withEnv(["HOME=${env.WORKSPACE}"]) {
+                  sh "pip install boto3==1.9.209"
             sh "python gen_creds_for_db.py"
-        }
+                }
         }
         stage('Building') {
             agent any
