--- a/Project/jenkins/Jenkinsfile
+++ b/Project/jenkins/Jenkinsfile
@@ -4,16 +4,19 @@ pipeline {
         FLASK_ENV = 'docker'
     }
     stages {
-        stage('Gen creds') {
-          agent { docker { image 'python:3.7.4' } }
-            steps {
-              sh 'pip install boto3==1.9.209'
-              sh 'python gen_creds_for_db.py'
-            }
-        }
+        //stage('Gen creds') {
+          //agent { docker { image 'python:3.7.4' } }
+            //steps {
+              //sh 'pip install boto3==1.9.209'
+              //sh 'python gen_creds_for_db.py'
+            //}
+        //}
         stage('Building') {
             agent any
             steps {
+            withAWS(credentials: 'aws-credentials', region: 'eu-west-1') {
+    sh 'aws iam get-user'
+}
              dir ('Project/jenkins/') {
                   sh 'make build'
                 }
