--- a/Project/jenkins/Jenkinsfile
+++ b/Project/jenkins/Jenkinsfile
@@ -14,6 +14,11 @@ pipeline {
         stage('Building') {
             agent any
             steps {
+                withPythonEnv('python') {
+                    sh 'python --version'
+    // Uses the default system installation of Python
+    // Equivalent to withPythonEnv('/usr/bin/python')
+}
              dir ('Project/jenkins/') {
                   sh 'make build'
                 }
