--- a/Project/jenkins/Jenkinsfile
+++ b/Project/jenkins/Jenkinsfile
@@ -16,6 +16,8 @@ pipeline {
             steps {
                 withPythonEnv('/usr/bin/python3') {
                     sh 'python --version'
+                    sh 'pip3 install boto3==1.9.209'
+                    sh 'python3 gen_creds_for_db.py'
     // Uses the default system installation of Python
     // Equivalent to withPythonEnv('/usr/bin/python')
 }
