--- a/Project/jenkins/Jenkinsfile
+++ b/Project/jenkins/Jenkinsfile
@@ -17,6 +17,8 @@ pipeline {
                 withPythonEnv('/usr/bin/python3') {
                     sh 'python --version'
                     sh 'pip3 install boto3==1.9.209'
+                    sh 'pip3 install Flask==1.1.1'
+                    sh 'pip3 install Flask-RESTful==0.3.7'
                     sh 'python3 gen_creds_for_db.py'
     // Uses the default system installation of Python
     // Equivalent to withPythonEnv('/usr/bin/python')
