--- a/Project/jenkins/Jenkinsfile
+++ b/Project/jenkins/Jenkinsfile
@@ -1,7 +1,7 @@
 pipeline {
     agent none
     environment {
-        FLASK_ENV = 'prod'
+        FLASK_ENV = 'dev'
     }
     stages {
         stage('Building') {
